// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`role should render filtered data 1`] = `
Array [
  <Provider
    aria-label="permissions table"
    className="pf-c-table pf-m-grid-md"
    columns={
      Array [
        Object {
          "cell": Object {
            "formatters": Array [
              [Function],
            ],
            "transforms": Array [
              [Function],
            ],
          },
          "data": undefined,
          "extraParams": Object {
            "actionResolver": undefined,
            "actions": undefined,
            "allRowsSelected": false,
            "areActionsDisabled": undefined,
            "canSelectAll": false,
            "contentId": "expanded-content",
            "dropdownDirection": "down",
            "dropdownPosition": "right",
            "expandId": "expandable-toggle",
            "firstUserColumnIndex": 0,
            "onCollapse": undefined,
            "onExpand": undefined,
            "onRowEdit": undefined,
            "onSelect": undefined,
            "onSort": [Function],
            "rowLabeledBy": "simple-node",
            "sortBy": Object {},
          },
          "header": Object {
            "formatters": Array [],
            "label": "Application",
            "transforms": Array [
              [Function],
              [Function],
            ],
          },
          "property": "application",
          "props": Object {
            "data-key": 0,
            "data-label": "Application",
          },
        },
        Object {
          "cell": Object {
            "formatters": Array [
              [Function],
            ],
            "transforms": Array [
              [Function],
            ],
          },
          "data": undefined,
          "extraParams": Object {
            "actionResolver": undefined,
            "actions": undefined,
            "allRowsSelected": false,
            "areActionsDisabled": undefined,
            "canSelectAll": false,
            "contentId": "expanded-content",
            "dropdownDirection": "down",
            "dropdownPosition": "right",
            "expandId": "expandable-toggle",
            "firstUserColumnIndex": 0,
            "onCollapse": undefined,
            "onExpand": undefined,
            "onRowEdit": undefined,
            "onSelect": undefined,
            "onSort": [Function],
            "rowLabeledBy": "simple-node",
            "sortBy": Object {},
          },
          "header": Object {
            "formatters": Array [],
            "label": "Resource type",
            "transforms": Array [
              [Function],
              [Function],
            ],
          },
          "property": "resource-type",
          "props": Object {
            "data-key": 1,
            "data-label": "Resource type",
          },
        },
        Object {
          "cell": Object {
            "formatters": Array [
              [Function],
            ],
            "transforms": Array [
              [Function],
            ],
          },
          "data": undefined,
          "extraParams": Object {
            "actionResolver": undefined,
            "actions": undefined,
            "allRowsSelected": false,
            "areActionsDisabled": undefined,
            "canSelectAll": false,
            "contentId": "expanded-content",
            "dropdownDirection": "down",
            "dropdownPosition": "right",
            "expandId": "expandable-toggle",
            "firstUserColumnIndex": 0,
            "onCollapse": undefined,
            "onExpand": undefined,
            "onRowEdit": undefined,
            "onSelect": undefined,
            "onSort": [Function],
            "rowLabeledBy": "simple-node",
            "sortBy": Object {},
          },
          "header": Object {
            "formatters": Array [],
            "label": "Operation",
            "transforms": Array [
              [Function],
              [Function],
            ],
          },
          "property": "operation",
          "props": Object {
            "data-key": 2,
            "data-label": "Operation",
          },
        },
        Object {
          "cell": Object {
            "formatters": Array [
              [Function],
            ],
            "transforms": Array [
              [Function],
            ],
          },
          "data": undefined,
          "extraParams": Object {
            "actionResolver": undefined,
            "actions": undefined,
            "allRowsSelected": false,
            "areActionsDisabled": undefined,
            "canSelectAll": false,
            "contentId": "expanded-content",
            "dropdownDirection": "down",
            "dropdownPosition": "right",
            "expandId": "expandable-toggle",
            "firstUserColumnIndex": 0,
            "onCollapse": undefined,
            "onExpand": undefined,
            "onRowEdit": undefined,
            "onSelect": undefined,
            "onSort": [Function],
            "rowLabeledBy": "simple-node",
            "sortBy": Object {},
          },
          "header": Object {
            "formatters": Array [],
            "label": "Last commit",
            "transforms": Array [
              [Function],
              [Function],
              [Function],
            ],
          },
          "property": "last-commit",
          "props": Object {
            "data-key": 3,
            "data-label": "Last commit",
          },
        },
      ]
    }
    data-ouia-component-id={213}
    data-ouia-component-type="PF4/Table"
    data-ouia-safe={true}
    renderers={
      Object {
        "body": Object {
          "cell": [Function],
          "row": [Function],
          "wrapper": [Function],
        },
        "header": Object {
          "cell": [Function],
        },
      }
    }
    role="grid"
  />,
  <table
    aria-label="permissions table"
    className="pf-c-table pf-m-grid-md"
    data-ouia-component-id={213}
    data-ouia-component-type="PF4/Table"
    data-ouia-safe={true}
    role="grid"
  >
    <TableHeader />
    <Component />
  </table>,
]
`;

exports[`role should render permissions table 1`] = `
Array [
  <Provider
    aria-label="permissions table"
    className="pf-c-table pf-m-grid-md"
    columns={
      Array [
        Object {
          "cell": Object {
            "formatters": Array [
              [Function],
            ],
            "transforms": Array [
              [Function],
            ],
          },
          "data": undefined,
          "extraParams": Object {
            "actionResolver": undefined,
            "actions": undefined,
            "allRowsSelected": false,
            "areActionsDisabled": undefined,
            "canSelectAll": false,
            "contentId": "expanded-content",
            "dropdownDirection": "down",
            "dropdownPosition": "right",
            "expandId": "expandable-toggle",
            "firstUserColumnIndex": 0,
            "onCollapse": undefined,
            "onExpand": undefined,
            "onRowEdit": undefined,
            "onSelect": undefined,
            "onSort": [Function],
            "rowLabeledBy": "simple-node",
            "sortBy": Object {},
          },
          "header": Object {
            "formatters": Array [],
            "label": "Application",
            "transforms": Array [
              [Function],
              [Function],
            ],
          },
          "property": "application",
          "props": Object {
            "data-key": 0,
            "data-label": "Application",
          },
        },
        Object {
          "cell": Object {
            "formatters": Array [
              [Function],
            ],
            "transforms": Array [
              [Function],
            ],
          },
          "data": undefined,
          "extraParams": Object {
            "actionResolver": undefined,
            "actions": undefined,
            "allRowsSelected": false,
            "areActionsDisabled": undefined,
            "canSelectAll": false,
            "contentId": "expanded-content",
            "dropdownDirection": "down",
            "dropdownPosition": "right",
            "expandId": "expandable-toggle",
            "firstUserColumnIndex": 0,
            "onCollapse": undefined,
            "onExpand": undefined,
            "onRowEdit": undefined,
            "onSelect": undefined,
            "onSort": [Function],
            "rowLabeledBy": "simple-node",
            "sortBy": Object {},
          },
          "header": Object {
            "formatters": Array [],
            "label": "Resource type",
            "transforms": Array [
              [Function],
              [Function],
            ],
          },
          "property": "resource-type",
          "props": Object {
            "data-key": 1,
            "data-label": "Resource type",
          },
        },
        Object {
          "cell": Object {
            "formatters": Array [
              [Function],
            ],
            "transforms": Array [
              [Function],
            ],
          },
          "data": undefined,
          "extraParams": Object {
            "actionResolver": undefined,
            "actions": undefined,
            "allRowsSelected": false,
            "areActionsDisabled": undefined,
            "canSelectAll": false,
            "contentId": "expanded-content",
            "dropdownDirection": "down",
            "dropdownPosition": "right",
            "expandId": "expandable-toggle",
            "firstUserColumnIndex": 0,
            "onCollapse": undefined,
            "onExpand": undefined,
            "onRowEdit": undefined,
            "onSelect": undefined,
            "onSort": [Function],
            "rowLabeledBy": "simple-node",
            "sortBy": Object {},
          },
          "header": Object {
            "formatters": Array [],
            "label": "Operation",
            "transforms": Array [
              [Function],
              [Function],
            ],
          },
          "property": "operation",
          "props": Object {
            "data-key": 2,
            "data-label": "Operation",
          },
        },
        Object {
          "cell": Object {
            "formatters": Array [
              [Function],
            ],
            "transforms": Array [
              [Function],
            ],
          },
          "data": undefined,
          "extraParams": Object {
            "actionResolver": undefined,
            "actions": undefined,
            "allRowsSelected": false,
            "areActionsDisabled": undefined,
            "canSelectAll": false,
            "contentId": "expanded-content",
            "dropdownDirection": "down",
            "dropdownPosition": "right",
            "expandId": "expandable-toggle",
            "firstUserColumnIndex": 0,
            "onCollapse": undefined,
            "onExpand": undefined,
            "onRowEdit": undefined,
            "onSelect": undefined,
            "onSort": [Function],
            "rowLabeledBy": "simple-node",
            "sortBy": Object {},
          },
          "header": Object {
            "formatters": Array [],
            "label": "Last commit",
            "transforms": Array [
              [Function],
              [Function],
              [Function],
            ],
          },
          "property": "last-commit",
          "props": Object {
            "data-key": 3,
            "data-label": "Last commit",
          },
        },
      ]
    }
    data-ouia-component-id={23}
    data-ouia-component-type="PF4/Table"
    data-ouia-safe={true}
    renderers={
      Object {
        "body": Object {
          "cell": [Function],
          "row": [Function],
          "wrapper": [Function],
        },
        "header": Object {
          "cell": [Function],
        },
      }
    }
    role="grid"
  />,
  <table
    aria-label="permissions table"
    className="pf-c-table pf-m-grid-md"
    data-ouia-component-id={23}
    data-ouia-component-type="PF4/Table"
    data-ouia-safe={true}
    role="grid"
  >
    <TableHeader />
    <Component />
  </table>,
]
`;

exports[`role should render second page of table 1`] = `
Array [
  <Provider
    aria-label="permissions table"
    className="pf-c-table pf-m-grid-md"
    columns={
      Array [
        Object {
          "cell": Object {
            "formatters": Array [
              [Function],
            ],
            "transforms": Array [
              [Function],
            ],
          },
          "data": undefined,
          "extraParams": Object {
            "actionResolver": undefined,
            "actions": undefined,
            "allRowsSelected": false,
            "areActionsDisabled": undefined,
            "canSelectAll": false,
            "contentId": "expanded-content",
            "dropdownDirection": "down",
            "dropdownPosition": "right",
            "expandId": "expandable-toggle",
            "firstUserColumnIndex": 0,
            "onCollapse": undefined,
            "onExpand": undefined,
            "onRowEdit": undefined,
            "onSelect": undefined,
            "onSort": [Function],
            "rowLabeledBy": "simple-node",
            "sortBy": Object {},
          },
          "header": Object {
            "formatters": Array [],
            "label": "Application",
            "transforms": Array [
              [Function],
              [Function],
            ],
          },
          "property": "application",
          "props": Object {
            "data-key": 0,
            "data-label": "Application",
          },
        },
        Object {
          "cell": Object {
            "formatters": Array [
              [Function],
            ],
            "transforms": Array [
              [Function],
            ],
          },
          "data": undefined,
          "extraParams": Object {
            "actionResolver": undefined,
            "actions": undefined,
            "allRowsSelected": false,
            "areActionsDisabled": undefined,
            "canSelectAll": false,
            "contentId": "expanded-content",
            "dropdownDirection": "down",
            "dropdownPosition": "right",
            "expandId": "expandable-toggle",
            "firstUserColumnIndex": 0,
            "onCollapse": undefined,
            "onExpand": undefined,
            "onRowEdit": undefined,
            "onSelect": undefined,
            "onSort": [Function],
            "rowLabeledBy": "simple-node",
            "sortBy": Object {},
          },
          "header": Object {
            "formatters": Array [],
            "label": "Resource type",
            "transforms": Array [
              [Function],
              [Function],
            ],
          },
          "property": "resource-type",
          "props": Object {
            "data-key": 1,
            "data-label": "Resource type",
          },
        },
        Object {
          "cell": Object {
            "formatters": Array [
              [Function],
            ],
            "transforms": Array [
              [Function],
            ],
          },
          "data": undefined,
          "extraParams": Object {
            "actionResolver": undefined,
            "actions": undefined,
            "allRowsSelected": false,
            "areActionsDisabled": undefined,
            "canSelectAll": false,
            "contentId": "expanded-content",
            "dropdownDirection": "down",
            "dropdownPosition": "right",
            "expandId": "expandable-toggle",
            "firstUserColumnIndex": 0,
            "onCollapse": undefined,
            "onExpand": undefined,
            "onRowEdit": undefined,
            "onSelect": undefined,
            "onSort": [Function],
            "rowLabeledBy": "simple-node",
            "sortBy": Object {},
          },
          "header": Object {
            "formatters": Array [],
            "label": "Operation",
            "transforms": Array [
              [Function],
              [Function],
            ],
          },
          "property": "operation",
          "props": Object {
            "data-key": 2,
            "data-label": "Operation",
          },
        },
        Object {
          "cell": Object {
            "formatters": Array [
              [Function],
            ],
            "transforms": Array [
              [Function],
            ],
          },
          "data": undefined,
          "extraParams": Object {
            "actionResolver": undefined,
            "actions": undefined,
            "allRowsSelected": false,
            "areActionsDisabled": undefined,
            "canSelectAll": false,
            "contentId": "expanded-content",
            "dropdownDirection": "down",
            "dropdownPosition": "right",
            "expandId": "expandable-toggle",
            "firstUserColumnIndex": 0,
            "onCollapse": undefined,
            "onExpand": undefined,
            "onRowEdit": undefined,
            "onSelect": undefined,
            "onSort": [Function],
            "rowLabeledBy": "simple-node",
            "sortBy": Object {},
          },
          "header": Object {
            "formatters": Array [],
            "label": "Last commit",
            "transforms": Array [
              [Function],
              [Function],
              [Function],
            ],
          },
          "property": "last-commit",
          "props": Object {
            "data-key": 3,
            "data-label": "Last commit",
          },
        },
      ]
    }
    data-ouia-component-id={126}
    data-ouia-component-type="PF4/Table"
    data-ouia-safe={true}
    renderers={
      Object {
        "body": Object {
          "cell": [Function],
          "row": [Function],
          "wrapper": [Function],
        },
        "header": Object {
          "cell": [Function],
        },
      }
    }
    role="grid"
  />,
  <table
    aria-label="permissions table"
    className="pf-c-table pf-m-grid-md"
    data-ouia-component-id={126}
    data-ouia-component-type="PF4/Table"
    data-ouia-safe={true}
    role="grid"
  >
    <TableHeader />
    <Component />
  </table>,
]
`;

exports[`role should render top toolbar 1`] = `
<TopToolbar
  breadcrumbs={
    Array [
      Object {
        "title": "Roles",
        "to": "/roles",
      },
      Object {
        "isActive": true,
        "title": "Some name",
      },
    ]
  }
  paddingBottom={false}
/>
`;
